# network_software

./: .gitignore
dhcp/: README.md
dhcp/client/: Makefile
dhcp/client/configs/: client2.conf
dhcp/client/src/: client_main.cpp
dhcp/server/: server.conf
dhcp/server/src/: dhcp_server.cpp
dhcp/v1/: README.md  docker-compose.yml
dhcp/v1/client/: Dockerfile
dhcp/v1/client/configs/: client1.conf
dhcp/v1/client/src/: dhcp_client.cpp  dhcp_client.h
dhcp/v1/common/src/: dhcp_common.h
dhcp/v1/server/: Makefile
dhcp/v1/server/src/: dhcp_server.h  server_main.cpp
dhcp/v2/: docker-compose.yml
dhcp/v2/captures/: dhcp_traffic.pcap
dhcp/v2/client/: Dockerfile  entrypoint.sh
dhcp/v2/common/src/: common_config_parser.h
dhcp/v2/server/: Dockerfile  server.conf
udp/: CMakeLists.txt  README.md  client.cpp  server.cpp
udp/include/: crc32.h
udp/src/: crc32.cpp
